--- a/theme_webpack/package.json
+++ b/theme_webpack/package.json
@@ -1,62 +1,18 @@
 {
-  "name": "react-keeper",
-  "version": "2.1.9",
-  "description": "A Strong Routing Library of React",
-  "homepage": "https://github.com/vifird/react-keeper",
-  "bug": "https://github.com/vifird/react-keeper/issues",
-  "email": "vifirde@gmail.com",
+  "name": "theme_webpack",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "npm run example",
-    "example": "cross-env NODE_ENV=development node example/serve false",
-    "test": "jest",
-    "build": "npm run build-umd && npm run build-min",
-    "build-umd": "cross-env NODE_ENV=production webpack --config webpack.build.js modules/index.js umd/react-keeper.js",
-    "build-min": "cross-env NODE_ENV=production webpack --config webpack.build.js -p modules/index.js umd/react-keeper.min.js",
-    "precompile": "rimraf npm/__build__/**.js && rimraf npm/__build__/**/**.js",
-    "compile": "cross-env NODE_ENV=production babel modules --extensions .js --out-dir npm/__build__",
-    "prepublish": "npm run compile",
-    "publish": "npm publish npm/__build__/"
+    "test": "cross-env Source=sdfasdfasdfasdf webpack"
   },
-  "dependencies": {
-    "prop-types": "^15.5.10",
-    "create-react-class": "^15.6.0",
-    "vhistory": "^1.0.0"
-  },
-  "peerDependencies": {
-    "react": "^15.0.0 || ^16.0.0 || ^0.14.0",
-    "react-dom": "^15.0.0 || ^16.0.0 || ^0.14.0"
-  },
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^6.4.1",
-    "babel-plugin-dev-expression": "^0.2.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "codecov": "^1.0.1",
-    "cross-env": "^3.1.3",
-    "css-loader": "^0.26.1",
-    "eslint": "^3.2.0",
-    "eslint-config-rackt": "^1.1.1",
-    "eslint-loader": "^1.6.1",
-    "eslint-plugin-babel": "^4.0.0",
-    "eslint-plugin-react": "^6.8.0",
-    "express": "^4.14.0",
-    "express-urlrewrite": "^1.2.0",
-    "jest": "~23.6.0",
-    "react-actor": "^1.0.5",
-    "react-addons-css-transition-group": "^15.4.1",
-    "react-addons-test-utils": "^15.4.1",
-    "react-boxer": "^1.0.4",
-    "react-hot-loader": "^1.3.1",
-    "react-router": "^4.1.1",
-    "rimraf": "^2.5.4",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.14.0",
-    "webpack-dev-middleware": "^1.9.0",
-    "webpack-dev-server": "^1.16.2"
+    "cross-env": "^5.2.0",
+    "path": "^0.12.7",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.3.1"
   }
 }
