--- a/easyweb_webpack/package.json
+++ b/easyweb_webpack/package.json
@@ -50,6 +50,7 @@
     "history": "^4.7.2",
     "prop-types": "^15.7.2",
     "react": "^16.3.1",
+    "react-color": "^2.17.3",
     "react-dom": "^16.3.1",
     "react-keeper": "^2.1.9"
   }
