--- a/theme_webpack/package.json
+++ b/theme_webpack/package.json
@@ -1,18 +1,57 @@
 {
-  "name": "theme_webpack",
+  "name": "easyweb",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "cross-env Source=sdfasdfasdfasdf webpack"
+    "server": "webpack-dev-server  --mode development",
+    "build": "cross-env NODE_ENV=production webpack --mode production"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-dynamic-import-webpack": "^1.1.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "copy-webpack-plugin": "^4.5.2",
     "cross-env": "^5.2.0",
+    "css-loader": "^1.0.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^2.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.3",
+    "node-sass": "^4.9.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "path": "^0.12.7",
-    "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.3.1"
+    "postcss-loader": "^3.0.0",
+    "postcss-px2rem": "^0.3.0",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.3.1",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
+    "sass": "^1.14.0",
+    "sass-loader": "^7.1.0",
+    "scss": "^0.2.4",
+    "scss-loader": "0.0.1",
+    "style-loader": "^0.23.0",
+    "url-loader": "^1.1.1",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.1",
+    "webpack-dev-server": "^3.1.9",
+    "write-file-webpack-plugin": "^4.4.1"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "history": "^4.7.2",
+    "prop-types": "^15.7.2",
+    "react": "^16.3.1",
+    "react-color": "^2.17.3",
+    "react-dom": "^16.3.1",
+    "react-keeper": "^2.1.9"
   }
 }
