--- a/shopdemo/package.json
+++ b/shopdemo/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "lodash": "^4.17.15",
     "path": "^0.12.7",
     "vant": "^2.2.8",
     "vue": "^2.6.10",
